[metadata]
name = puppet-crane
summary = Puppet module for Crane
description-file =
    README.md
author = Dan Prince
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/puppet-openstack-guide/latest
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
